httpweb/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    name: myingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /myapp/(.*)
        pathType: Prefix
        backend:
          service:
            name: myapp-service
            port:
              number: 8080
